--- a/wwr/about.html
+++ b/wwr/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="About our White Water Rafting company">
+    <meta name="description" content=" At White Water Rafting, we are passionate about adventure and the great outdoors. We specialize in providing exhilarating whitewater rafting experiences for adventurers of all skill levels. Whether you are a seasoned rafter or a first-timer, our expert guides are dedicated to ensuring you have a safe, fun, and unforgettable experience on the river. ">
     <meta name="author" content="Oluwatigbo Alao">
     <link rel="stylesheet" href="styles/rafting.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
