--- a/wwr/about.html
+++ b/wwr/about.html
@@ -48,7 +48,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2023 White Water Rafting | Your Name</p>
+        <p>&copy; 2023 White Water Rafting | Oluwatigbo Alao</p>
         <a href="http://facebook.com"><img src="images/Colored_Facebook3_svg-64.webp" alt="Facebook"></a>
         <a href="http://twitter.com"><img src="images/BW_Twitter_glyph_svg-64.webp" alt="Twitter"></a>
         <a href="http://instagram.com"><img src="images/1_Instagram_colored_svg_1-64.webp" alt="Instagram"></a>
