--- a/wwr/about.html
+++ b/wwr/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content=" At White Water Rafting, we are passionate about adventure and the great outdoors. We specialize in providing exhilarating whitewater rafting experiences for adventurers of all skill levels. Whether you are a seasoned rafter or a first-timer, our expert guides are dedicated to ensuring you have a safe, fun, and unforgettable experience on the river. ">
+    <meta name="description" content="At White Water Rafting, we are passionate about adventure and the great outdoors. We specialize in providing exhilarating whitewater rafting experiences for adventurers of all skill levels. Whether you are a seasoned rafter or a first-timer, our expert guides are dedicated to ensuring you have a safe, fun, and unforgettable experience on the river.">
     <meta name="author" content="Oluwatigbo Alao">
     <link rel="stylesheet" href="styles/rafting.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -13,45 +13,66 @@
 </head>
 <body>
     <header>
-        <img src="images/logo.webp" alt="White Water Rafting Logo">
+        <img src="images/logo.webp" alt="White Water Rafting Logo" class="logo">
+        <h1>White Water Rafting</h1>
         <nav>
-            <a href="index.html">Home</a>
-            <a href="about.html">About</a>
-            <a href="trips.html">Trips</a>
-            <a href="contact.html">Contact</a>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="trips.html">Trips</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
         </nav>
     </header>
 
     <main>
         <div class="hero">
             <img src="images/hero_transparency_1024.webp" alt="Rafting Adventure" class="hero-img">
-            <h1>White Water Rafting</h1>
             <article>
                 <img src="images/rafting59_600.webp" alt="Happy Client">
                 <p>Your adventure awaits with us!</p>
             </article>
         
-            <section>
+            <section class="history">
                 <h2>History</h2>
                 <p>Our company was founded on the principles of adventure and safety...</p>
             </section>
 
-            <section>
+            <section class="adventures">
                 <h2>Adventure Awaits You!</h2>
-                <img src="images/rafting14_600.webp" alt="Rafting Image 1">
-                <img src="images/rafting56_600.webp" alt="Rafting Image 2">
-                <img src="images/rafting58_600.webp" alt="Rafting Image 3">
-                <img src="images/rafting64_600.webp" alt="Rafting Image 4">
-                <img src="images/rafting65_600.webp" alt="Rafting Image 5">
+                <div class="adventure-gallery">
+                    <figure>
+                        <img src="images/rafting14_600.webp" alt="Rafting Image 1">
+                        <figcaption>Los Dientes del Diablo</figcaption>
+                    </figure>
+                    <figure>
+                        <img src="images/rafting56_600.webp" alt="Rafting Image 2">
+                        <figcaption>Big Mallard</figcaption>
+                    </figure>
+                    <figure>
+                        <img src="images/rafting58_600.webp" alt="Rafting Image 3">
+                        <figcaption>Half Day Adventure</figcaption>
+                    </figure>
+                    <figure>
+                        <img src="images/rafting64_600.webp" alt="Rafting Image 4">
+                        <figcaption>Full Day Adventure</figcaption>
+                    </figure>
+                    <figure>
+                        <img src="images/rafting65_600.webp" alt="Rafting Image 5">
+                        <figcaption>Extreme Rapids</figcaption>
+                    </figure>
+                </div>
             </section>
         </div>
     </main>
 
     <footer>
         <p>&copy; 2023 White Water Rafting | Oluwatigbo Alao</p>
-        <a href="http://facebook.com"><img src="images/Colored_Facebook3_svg-64.webp" alt="Facebook"></a>
-        <a href="http://twitter.com"><img src="images/BW_Twitter_glyph_svg-64.webp" alt="Twitter"></a>
-        <a href="http://instagram.com"><img src="images/1_Instagram_colored_svg_1-64.webp" alt="Instagram"></a>
+        <div class="social-media">
+            <a href="http://facebook.com"><img src="images/Colored_Facebook3_svg-64.webp" alt="Facebook"></a>
+            <a href="http://twitter.com"><img src="images/BW_Twitter_glyph_svg-64.webp" alt="Twitter"></a>
+            <a href="http://instagram.com"><img src="images/1_Instagram_colored_svg_1-64.webp" alt="Instagram"></a>
+        </div>
     </footer>
 </body>
 </html>
