--- a/wwr/index.html
+++ b/wwr/index.html
@@ -14,11 +14,14 @@
 <body>
     <header>
         <img src="images/logo.webp" alt="White Water Rafting Logo" class="logo">
+        <h1>White Water Rafting</h1>
         <nav>
-            <a href="index.html">Home</a>
-            <a href="about.html">About</a>
-            <a href="trips.html">Trips</a>
-            <a href="contact.html">Contact</a>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="trips.html">Trips</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
         </nav>
     </header>
 
@@ -41,9 +44,11 @@
 
     <footer>
         <p>&copy; 2023 White Water Rafting | Oluwatigbo Alao</p>
-        <a href="http://facebook.com"><img src="images/Colored_Facebook3_svg-64.webp" alt="Facebook"></a>
-        <a href="http://twitter.com"><img src="images/BW_Twitter_glyph_svg-64.webp" alt="Twitter"></a>
-        <a href="http://instagram.com"><img src="images/1_Instagram_colored_svg_1-64.webp" alt="Instagram"></a>
+        <div class="social-media">
+            <a href="http://facebook.com"><img src="images/Colored_Facebook3_svg-64.webp" alt="Facebook"></a>
+            <a href="http://twitter.com"><img src="images/BW_Twitter_glyph_svg-64.webp" alt="Twitter"></a>
+            <a href="http://instagram.com"><img src="images/1_Instagram_colored_svg_1-64.webp" alt="Instagram"></a>
+        </div>
     </footer>
 </body>
 </html>
